add_library(alignment
pattern.cpp
pattern.h
alignment.cpp
alignment.h
alignmentpairwise.cpp
alignmentpairwise.h
alignmentsummary.cpp
alignmentsummary.h
maalignment.cpp
maalignment.h
superalignment.cpp
superalignment.h
superalignmentpairwise.cpp
superalignmentpairwise.h
superalignmentpairwiseplen.cpp
superalignmentpairwiseplen.h
superalignmentunlinked.cpp
superalignmentunlinked.h
alisimulator.cpp alisimulator.h
alisimulatorinvar.cpp alisimulatorinvar.h
alisimulatorheterogeneity.cpp alisimulatorheterogeneity.h
alisimulatorheterogeneityinvar.cpp alisimulatorheterogeneityinvar.h
)

target_link_libraries(alignment ncl gsl)
