add_library(ncl 
nxsassumptionsblock.cpp
nxsblock.cpp
nxscharactersblock.cpp
nxsdatablock.cpp
nxsdiscretedatum.cpp
nxsdiscretematrix.cpp
nxsdistancedatum.cpp
nxsdistancesblock.cpp
nxsemptyblock.cpp
nxsexception.cpp
nxsreader.cpp
nxssetreader.cpp
nxsstring.cpp
nxstaxablock.cpp
nxstoken.cpp
nxstreesblock.cpp)
