add_library(phylolib
bipartitionList.c 
evaluateGenericSpecial.c 
evaluatePartialGenericSpecial.c 
makenewzGenericSpecial.c 
models.c optimizeModel.c 
restartHashTable.c 
searchAlgo.c 
topologies.c 
trash.c 
treeIO.c
nnisearch.c 
newviewGenericSpecial.c 
fastDNAparsimony.c 
randomTree.c 
recom.c 
utils.c
)