add_library(placement
            placement.cpp placement.h
            blockallocator.cpp blockallocator.h
            placementcostcalculator.cpp placementcostcalculator.h
            targetbranch.cpp targetbranch.h
            parallelparsimonycalculator.cpp parallelparsimonycalculator.h
            searchheuristic.cpp searchheuristic.h
            possibleplacement.cpp possibleplacement.h
            placementtraversalinfo.cpp placementtraversalinfo.h
            taxontoplace.cpp taxontoplace.h
            placementoptimizer.cpp placementoptimizer.h
            placementrun.cpp placementrun.h
)

